Se añade timeline twitter

--- a/src/header/header.html
+++ b/src/header/header.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../header/header.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="../js/pushbar.css">
 </head>
 <body>
     <div class="container main-container">
@@ -21,6 +22,14 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci vel harum eligendi. Quae cum sed eos, amet nisi accusamus est ducimus minus? Ea velit a molestias? Iure quo adipisci quasi.</p>
         </div>
 
+        <div data-pushbar-id="mypushbar1" data-pushbar-direction="right">
+            <button class="btn btn-sm btn-danger" data-pushbar-close style="float: left; margin: 5px;">Cerrar linea tiempo UNAD</button>
+            <div class="twitter-container">
+                <a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> 
+            </div>
+        </div>
+        
+
         <div class="footer">
             <nav class="navbar fixed-bottom navbar-light">
                 <ul class="non-ordened-list">
@@ -31,12 +40,20 @@
                     <li><a href="#">Company</a></li>
                     <li><a href="#">|</a></li>
                     <li><a href="#">Blog</a></li>
+                    <li><a href="#"><img class="twitter-icon" data-pushbar-target="mypushbar1" src="/src/img/twitter-logo.png" alt="twitter-icon"></a></li>
                 </ul>
             </nav>
         </div>
     </div>
-    
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
+    <script src="../js/pushbar.js"></script>
+    <script type="text/javascript">
+        const pushbar = new Pushbar({
+              blur:true,
+              overlay:true,
+            });
+      </script>
 </body>
 </html>
