--- a/Contenido.html
+++ b/Contenido.html
@@ -20,13 +20,8 @@
     <section class="contenedor">
         <section>
             <article>
-                <h3>Objetivos</h3>
-                    <h4>General</h4>
-                    <p>Presentar de una forma distinta y fácilmente digerible para los estudiantes del programa Tecnología en el desarrollo de Software, el tema referente al diseño de Sitios Web.</p>
-                    <h4>Especificos</h4>
-                    <p>Organizar de una forma dinámica y educativa los temas relacionados con el programa.</p>
-                    <p>Generar una mayor recepción por parte del estudiante de los temas tratados en el programa.</p>
-                    <p>Implementar nuevas herramientas para la presentación de temas a tratar dentro del programa.</p>
+                <h3>Actividades</h3>
+                
             </article>
            
         </section>
