--- a/Realizadores.html
+++ b/Realizadores.html
@@ -14,6 +14,8 @@
     </header>
     <nav>
         <a href="index.html">Inicio |</a>
+        <a href="Lecturas.html">Lecturas |</a>
+        <a href="Multimedia.html">Ayudas |</a>
         <a href="Contenido.html">Actividades |</a>
         <a href="Realizadores.html">Autores |</a>
     </nav>
