Adicion de lecturas
08 de abril

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fase 3 OVI UNAD</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="src/index.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
@@ -23,14 +23,19 @@
         <section>
             <article>
                 <h3>Objetivos</h3>
+
                     <h4>General</h4>
                     <p>Presentar de una forma distinta y fácilmente digerible para los estudiantes del programa Tecnología en el desarrollo de Software, el tema referente al diseño de Sitios Web.</p>
+                    
                     <h4>Especificos</h4>
                     <p>Organizar de una forma dinámica y educativa los temas relacionados con el programa.</p>
                     <p>Generar una mayor recepción por parte del estudiante de los temas tratados en el programa.</p>
                     <p>Implementar nuevas herramientas para la presentación de temas a tratar dentro del programa.</p>
             </article>
-           
+           <article>
+               <h3>Diseño Web</h3>
+               <p>En el tema de las páginas web, en su diseño, se debe tener en cuenta muchas herramientas y ayudas que nos permiten crear páginas que sean de fácil entendimiento, exploración y acceso a la información, por lo cual, en la presente ayuda se realizara un recorrido por el diseño de las páginas y como se desarrollan para dar un buen producto al usuario final y alcance el entendimiento o resuelva dudas sobre este tema, logrando con ello un avance significativo en el entendimiento y el manejo de dichas herramientas.</p>
+           </article>
         </section>
 
     </section>
