--- a/Lecturas.html
+++ b/Lecturas.html
@@ -20,12 +20,45 @@
         <a href="Realizadores.html">Autores |</a>
     </nav>
     <section class="contenedor">
-        <section>
+        <section class="central">
             <article>
                 <h3>Teoria</h3>
-                   
             </article>
-           
+            <article>
+                <h5>Guia para usar CSS3</h5>
+                <p>
+                    Nos muestra lo necesario para aplicar las modificaciones necesarias a las paginas y acondicionarlas a lo que queremos presentar
+                </p>
+                    <iframe src="PDF/CursoCSS3.pdf" frameborder="0" width="100%" height="400%"></iframe>
+            </article>
+            <article>
+                <h5>Guia para usar HTML</h5>
+                <p>
+                    Para la codificacion es necesario el conocimiento basico en como utilizar HTML version 5 en el diseño de paginas, por lo tanto en esta lectura se pueden conocer las nociones basicas
+                </p>
+                    <iframe src="PDF/Curso_HTML5_v1.pdf" frameborder="0" width="100%" height="200%"></iframe>
+            </article>
+            <article>
+                <h5>Sintaxis y estructura</h5>
+                <p>
+                    Como se dividen las partes de la pagina mediante semantica gracias al HTML5
+                </p>
+                    <iframe src="PDF/guia2.pdf" frameborder="0" width="100%" height="400%"></iframe>
+            </article>
+            <article>
+                <h5>Composicion de una pagina web</h5>
+                <p>
+                    Nos muestra las partes que son importante a la hora del diseño de una pagina web
+                </p>
+                    <iframe src="PDF/composicion-de-una-pagina-web.pdf" frameborder="0" width="100%" height="400%"></iframe>
+            </article>
+            <article>
+                <h5>Mejores editores</h5>
+                <p>
+                    Podemos observar hasta el momento cuales son los mejores editores para codificar paginas web
+                </p>
+                    <iframe src="PDF/Mejoreseditores.pdf" frameborder="0" width="100%" height="400%"></iframe>
+            </article>
         </section>
 
     </section>
