Uniendo los videos con el template de multimedia

--- a/src/pages/Actividades.html
+++ b/src/pages/Actividades.html
@@ -39,7 +39,7 @@
                     <li>|</li>
                     <li><a href="../../src/pages/Autores.html">Autores</a></li>
                     <li>|</li>
-                    <li><a  data-pushbar-target="mypushbar1" class="fab fa-twitter-square"></a></li>
+                    <li><a href="#"  data-pushbar-target="mypushbar1" class="fab fa-twitter-square"></a></li>
                     <li><a href="https://www.facebook.com/UniversidadUNAD" target="_blank" class="fab fa-facebook-square"></a></li>
                     <li><a href="https://www.instagram.com/universidadunad" target="_blank" class="fab fa-instagram"></a></li>
                 </ul>
