--- a/src/pages/Multimedia.html
+++ b/src/pages/Multimedia.html
@@ -22,7 +22,22 @@
         
         <div class="container-fluid content">
             <section>
-                <h3>videos to add pending</h3>
+                <article>
+                    <h4>¿Cómo diseñar una página web?</h4>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/13R2_QRmwrc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </article>
+                <article>
+                    <h4>¿Cómo usar HTML 5?</h4>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/rbuYtrNUxg4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </article>
+                <article>
+                    <h4>¿Cómo usar CSS?</h4>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/W6GTDfrWjXs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </article>
+                <article>
+                    <h3>Podcast</h3>
+                    <iframe id='audio_49317900' frameborder='0' allowfullscreen='' scrolling='no' height='200' style='border:1px solid #EEE; box-sizing:border-box; width:100%;' src="https://co.ivoox.com/es/player_ej_49317900_4_1.html?c1=ff6600"></iframe>
+                </article>
             </section>
         </div>       
 
@@ -39,7 +54,7 @@
                     <li>|</li>
                     <li><a href="../../src/pages/Autores.html">Autores</a></li>
                     <li>|</li>
-                    <li><a  data-pushbar-target="mypushbar1" class="fab fa-twitter-square"></a></li>
+                    <li><a href="#"  data-pushbar-target="mypushbar1" class="fab fa-twitter-square"></a></li>
                     <li><a href="https://www.facebook.com/UniversidadUNAD" target="_blank" class="fab fa-facebook-square"></a></li>
                     <li><a href="https://www.instagram.com/universidadunad" target="_blank" class="fab fa-instagram"></a></li>
                 </ul>
