se corrige la ruta del avatar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header">
             <nav class="navbar fixed-top navbar-light">
                 <p class="h3 title">Diseño de sitios Web</p>
-                <img src="/src/img/img_avatar.png" alt="Avatar" class="avatar">
+                <img src="./src/img/img_avatar.png" alt="Avatar" class="avatar">
             </nav>
         </div>
         
