--- a/src/pages/Actividades.html
+++ b/src/pages/Actividades.html
@@ -16,7 +16,7 @@
         <div class="header">
             <nav class="navbar fixed-top navbar-light">
                 <p class="h3 title">Actividades</p>
-                <img src="/src/img/img_avatar.png" alt="Avatar" class="avatar">
+                <img src="../img/img_avatar.png" alt="Avatar" class="avatar">
             </nav>
         </div>
         
