--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
                     <li><a href="#"  data-pushbar-target="mypushbar1" class="fab fa-twitter-square"></a></li>
                     <li><a href="https://www.facebook.com/UniversidadUNAD" target="_blank" class="fab fa-facebook-square"></a></li>
                     <li><a href="https://www.instagram.com/universidadunad" target="_blank" class="fab fa-instagram"></a></li>
+                    <li>
+                        <div id="sfcd1795t3xhzm3c1dqnbwzeyjj5uac9mjp"></div>
+                        <script type="text/javascript" src="https://counter10.stat.ovh/private/counter.js?c=d1795t3xhzm3c1dqnbwzeyjj5uac9mjp&down=async" async></script>
+                        <noscript><a href="https://www.contadorvisitasgratis.com" title="contador para web">
+                            <img src="https://counter10.stat.ovh/private/contadorvisitasgratis.php?c=d1795t3xhzm3c1dqnbwzeyjj5uac9mjp" 
+                            border="0" title="contador para web" alt="contador para web"></a></noscript>
+
+
+                    </li>
+
                 </ul>
             </nav>
         </div>
