--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
                    <p>En el tema de las páginas web, en su diseño, se debe tener en cuenta muchas herramientas y ayudas que nos permiten crear páginas que sean de fácil entendimiento, exploración y acceso a la información, por lo cual, en la presente ayuda se realizara un recorrido por el diseño de las páginas y como se desarrollan para dar un buen producto al usuario final y alcance el entendimiento o resuelva dudas sobre este tema, logrando con ello un avance significativo en el entendimiento y el manejo de dichas herramientas.</p>
                </article>
             </section>
+
+            <div class="row">
+                <div class="col-md-3"><p>Contador de <strong>Visitas</strong> registradas: </p></div> 
+                <div id="sfcd1795t3xhzm3c1dqnbwzeyjj5uac9mjp"></div>    
+                <noscript>
+                    <img src="https://counter10.stat.ovh/private/contadorvisitasgratis.php?c=d1795t3xhzm3c1dqnbwzeyjj5uac9mjp" 
+                    border="2px" title="Contador de visitas" alt="Contador de visitas">
+                </noscript>
+            </div>
         </div>       
 
         <div class="footer">
@@ -56,16 +65,6 @@
                     <li><a href="#"  data-pushbar-target="mypushbar1" class="fab fa-twitter-square"></a></li>
                     <li><a href="https://www.facebook.com/UniversidadUNAD" target="_blank" class="fab fa-facebook-square"></a></li>
                     <li><a href="https://www.instagram.com/universidadunad" target="_blank" class="fab fa-instagram"></a></li>
-                    <li>
-                        <div id="sfcd1795t3xhzm3c1dqnbwzeyjj5uac9mjp"></div>
-                        <script type="text/javascript" src="https://counter10.stat.ovh/private/counter.js?c=d1795t3xhzm3c1dqnbwzeyjj5uac9mjp&down=async" async></script>
-                        <noscript><a href="https://www.contadorvisitasgratis.com" title="contador para web">
-                            <img src="https://counter10.stat.ovh/private/contadorvisitasgratis.php?c=d1795t3xhzm3c1dqnbwzeyjj5uac9mjp" 
-                            border="0" title="contador para web" alt="contador para web"></a></noscript>
-
-
-                    </li>
-
                 </ul>
             </nav>
         </div>
@@ -76,6 +75,7 @@
             <a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> 
         </div>
     </div>
+    <script type="text/javascript" src="https://counter10.stat.ovh/private/counter.js?c=d1795t3xhzm3c1dqnbwzeyjj5uac9mjp&down=async" async></script>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
