--- a/src/pages/Actividades.html
+++ b/src/pages/Actividades.html
@@ -22,8 +22,23 @@
         
         <div class="container-fluid content">
             <section>
-                <h3>content to edit</h3>
+                <h3>Desarrollar</h3>
+               <article>
+                <h4>Actividad 1</h4>
+                <p>
+                   Diligenciar el siguiente formato como guia para planear que contendra la pagina web
+                </p>
+                <iframe src="../PDF/Formato Guion.pdf" frameborder="0" width="100%" height="600px"></iframe>
+               </article>
+                <article>
+                    <h4>Actividad 2</h4>
+                <p>
+                   Diseñar Wireframes
+                </p>
+                <iframe src="../PDF/Diseño de wireframes.pdf" frameborder="0" width="100%" height="600px"></iframe>
+                </article>
             </section>
+            
         </div>       
 
         <div class="footer">
